revert uri suggestion